[project]
name = "ccxt-playground"
version = "0.1.0"
description = "CLI tool to test CCXT exchange endpoints"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt>=4.5.2",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
ccxt-test = "main:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
